--- a/Angular-sistem-de-presenca/src/app/app.component.html
+++ b/Angular-sistem-de-presenca/src/app/app.component.html
@@ -1,3 +1,11 @@
 <div>
+  <main>
+    <header class="brand-name">
+      <img class="brand-logo" src="/assets/logo.svg" alt="logo" aria-hidden="true">
+    </header>
+    <section class="content">
+      <app-home></app-home>
+    </section>
+  </main>
   <app-data></app-data>
 </div>
