--- a/Angular-sistem-de-presenca/src/app/components/data/data.component.html
+++ b/Angular-sistem-de-presenca/src/app/components/data/data.component.html
@@ -1,20 +1,14 @@
 <section>
-  @for (post of data; track post.id) {
-  <div class="card">
+  @for (post of data; track post.id_aluno) {
+  <div class="card" (click)="onCardClick(post)">
     <div class="container">
       <img src="https://cdn.builder.io/api/v1/image/assets%2FYJIGb4i01jvw0SRdL5Bt%2F869bfbaec9c64415ae68235d9b7b1425"/>
       <h4>
-        <b>J{{ post.nome }}</b>
+        <b>{{ post.nome }}</b>
       </h4>
       <p>TIA: {{ post.id_aluno }}</p>
+      <p>Turma: {{ post.turma.serie }}</p>
     </div>
   </div>
   }
 </section>
-
-<!-- 
-<div>
-    <h3>Id aluno: {{ post.id_aluno }}</h3>
-    <h2>Nome: {{ post.nome }}</h2>
-    <h2>idade: {{ post.idade }}</h2>
-  </div> -->
