relatorios, envio falta por turma, professor e aula

--- a/my-app-master/src/App.css
+++ b/my-app-master/src/App.css
@@ -169,3 +169,72 @@ div {
   flex-direction: column;
   gap: 1rem;
 }
+
+select {
+  color: #333;
+}
+
+
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #333;
+}
+
+.font-controls {
+  margin-top: 20px;
+}
+
+.font-controls button {
+  margin-right: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.font-controls button:hover {
+  background-color: #0056b3;
+}
+
+/* Media query para dispositivos com largura máxima de 600px */
+@media only screen and (max-width: 600px) {
+  nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  nav li {
+    margin-bottom: 10px;
+  }
+
+  .font-controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .font-controls button {
+    margin: 5px;
+  }
+}
