--- a/my-app-master/src/pages/RelatorioFaltas.css
+++ b/my-app-master/src/pages/RelatorioFaltas.css
@@ -1,30 +1,37 @@
 /* src/pages/RelatorioFaltas.css */
 
 .table-responsive {
-    overflow-x: auto;
-  }
-  
-  .table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-  }
-  
-  .table th,
-  .table td {
-    padding: 8px;
-    border-bottom: 1px solid #ddd;
-    text-align: left;
-  }
-  
-  .table th {
-    background-color: #f2f2f2;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  .table td {
-    background-color: #fff;
-    color: #333;
-  }
-  
+  overflow-x: auto;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.table th,
+.table td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+  text-align: left;
+}
+
+.table th {
+  background-color: #f2f2f2;
+  color: #333;
+  font-weight: bold;
+}
+
+.table td {
+  background-color: #fff;
+  color: #333;
+}
+
+.titulo {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
